--- a/index.html
+++ b/index.html
@@ -20,96 +20,250 @@
     <h2 align="center"><var>∂T/∂t + u * ∂T/∂x - æ * (∂^2 T)/∂x^2 = 0</var></h2>
     <div class="row">
         <div class="col-xs-1"></div>
-        <div class="col-xs-3">
+        <div class="col-xs-2">
             <form class="form-horizontal">
                 <div class="form-horizontal">
                     <label class="control-label" for="p-update">Update time</label>
-                    <input class="form-control" type="text" id="p-update" placeholder="1000">
+                    <input class="form-control param" type="text" id="p-update" value="1000">
                 </div>
                 <div class="form-horizontal">
                     <label class="control-label" for="p-point_count">Points — <var>N</var></label>
-                    <input class="form-control" type="text" id="p-point_count" placeholder="100">
+                    <input class="form-control param" type="text" id="p-point_count" value="100">
                 </div>
                 <div class="form-horizontal">
                     <label class="control-label" for="p-velocity">Velocity — <var>u</var></label>
-                    <input class="form-control" type="text" id="p-velocity" placeholder="0.01">
+                    <input class="form-control param" type="text" id="p-velocity" value="0.01">
                 </div>
                 <div class="form-horizontal">
                     <label class="control-label" for="p-kappa"><var>æ</var></label>
-                    <input class="form-control" type="text" id="p-kappa" placeholder="0.01">
+                    <input class="form-control param" type="text" id="p-kappa" value="0.01">
                 </div>
             </form>
         </div>
-        <div class="col-xs-3">
+        <div class="col-xs-2">
             <div class="form-horizontal">
                 <label class="control-label" for="p-dx"><var>∂x</var></label>
-                <input class="form-control" type="text" id="p-dx" placeholder="0.1">
+                <input class="form-control param" type="text" id="p-dx" value="0.1">
             </div>
             <div class="form-horizontal">
                 <label class="control-label" for="p-dt"><var>∂t</var></label>
-                <input class="form-control" type="text" id="p-dt" placeholder="0.001">
+                <input class="form-control param" type="text" id="p-dt" value="0.001">
             </div>
             <form class="form-horizontal">
                 <label class="control-label" for="p-scheme">Scheme</label>
                 <select class="form-control" id="p-scheme">
-                    <option>Explicit downstream</option>
-                    <option>Explicit upstream</option>
-                    <option>Implicit downstream</option>
-                    <option>Implicit upstream</option>
-                    <option>Staggered grid</option>
+                    <option>(1) Explicit downstream</option>
+                    <option>(2) Explicit upstream</option>
+                    <option>(3) Implicit downstream</option>
+                    <option>(4) Implicit upstream</option>
+                    <option>(5) Staggered grid</option>
                 </select>
-                <label class="control-label" for="p-y_values">Initial <var>y</var> values</label>
-                <select class="form-control" id="p-y_values">
-                    <option>20% on left is 1, others = 0</option>
-                    <option>middle point is 100, others is 0</option>
-                    <option>random values</option>
+                <label class="control-label" for="p-y-values">Initial <var>y</var> values</label>
+                <select class="form-control" id="p-y-values">
+                    <option>(1) 20% on left is 1, others = 0</option>
+                    <option>(2) middle point is 100, others is 0</option>
+                    <option>(3) random values</option>
                 </select>
             </form>
         </div>
-        <div class="col-xs-3">
+        <div class="col-xs-2">
             <form class="form-horizontal">
-            <p class="text-center" style="font-weight: bold"><var id="v-s">...</var></p>
-            <p class="text-center" style="font-weight: bold"><var id="v-r">...</var></p>
+            <p class="text-center" style="font-weight: bold"><var>S = u * ∂t / ∂x</var></p>
+            <p class="text-center" style="font-weight: bold"><var>R = æ * ∂t / (∂x^2)</var></p>
             <button type="button" class="btn btn-default btn-block" id="b-start">Start</button>
-            <button type="button" class="btn btn-default btn-block" id="b-pause" disabled="disabled">Pause</button>
             <button type="button" class="btn btn-default btn-block" id="b-stop" disabled="disabled">Stop</button>
-            <button type="button" class="btn btn-default btn-block" id="b-update" disabled="disabled">Update</button>
+            <button type="button" class="btn btn-default btn-block" id="b-update">Update</button>
             </form>
+        </div>
+        <div class="col-xs-4">
+            <label class="control-label" for="table">Current values</label>
+            <table class="table table-striped table-bordered" id="table">
+                <tr>
+                    <th>#</th><th>param</th><th>value</th>
+                    <th>#</th><th>param</th><th>value</th>
+                </tr>
+                <tr>
+                    <td>1</td><td>Upd</td><td id="v-update">1000</td>
+                    <td>5</td><td><var>∂x</var></td><td id="v-dx">0.1</td>
+                </tr>
+                <tr>
+                    <td>2</td><td><var>N</var></td><td id="v-point_count">100</td>
+                    <td>6</td><td><var>∂t</var></td><td id="v-dt">0.001</td>
+                </tr>
+                <tr>
+                    <td>3</td><td><var>u</var></td><td id="v-velocity">0.01</td>
+                    <td>7</td><td>scheme</td><td id="v-scheme">1</td>
+                </tr>
+                <tr>
+                    <td>4</td><td><var>æ</var></td><td id="v-kappa">0.01</td>
+                    <td>8</td><td>y-func</td><td id="v-y-values">1</td>
+                </tr>
+                <tr>
+                    <td>•</td><td><var>S</var></td><td id="v-s">0.0001</td>
+                    <td>•</td><td><var>R</var></td><td id="v-r">0.0010</td>
+                </tr>
+            </table>
         </div>
         <div class="col-xs-1"></div>
     </div>
     <div id="chart" style="height: 400px; width: 100%"></div>
 
 <script type="text/javascript">
-    var updateInterval = 1000,
-        number = 100,
-        velocity = 0.01, kappa = 0.01, dx = 0.1, dt = 0.001,
-        funcId = 1;
-</script>
+    var elParams = {
+            update: document.getElementById('p-update'),
+            points: document.getElementById('p-point_count'),
+            velocity: document.getElementById('p-velocity'),
+            kappa: document.getElementById('p-kappa'),
+            dx: document.getElementById('p-dx'),
+            dt: document.getElementById('p-dt')
+        },
+        elValues = {
+            update: document.getElementById('v-update'),
+            points: document.getElementById('v-point_count'),
+            velocity: document.getElementById('v-velocity'),
+            kappa: document.getElementById('v-kappa'),
+            dx: document.getElementById('v-dx'),
+            dt: document.getElementById('v-dt')
+        },
+        elButtons = {
+            start: document.getElementById("b-start"),
+            stop: document.getElementById("b-stop"),
+            update: document.getElementById("b-update")
+        },
+        params = {
+            update: 0,
+            points: 0,
+            velocity: 0,
+            kappa: 0,
+            dx: 0,
+            dt: 0,
+            scheme: 0,
+            func: 0
+        };
 
-<script src="res/script.js"></script>
-<script type="text/javascript">
-    var timerId;
-    var b_start = document.getElementById("b-start");
-    var b_pause = document.getElementById("b-pause");
-    var v_s = document.getElementById("v-s");
-    var v_r = document.getElementById("v-r");
-    v_s.innerHTML = "S = u * ∂t / ∂x = " + (velocity * (dt / dx)).toFixed(4);
-    v_r.innerHTML = "R = æ * ∂t / (∂x^2) = " + (kappa * dt / (dx * dx)).toFixed(4);
-    function pause() {
-        clearInterval(timerId);
-        b_pause.disabled = "true";
-        b_start.disabled = "";
+    elParams.prototype = { //??
+        scheme: document.getElementById('p-scheme'),
+        func: document.getElementById('p-y-values')
+    };
+    elValues.prototype = {
+        scheme: document.getElementById('v-scheme'),
+        func: document.getElementById('v-y-values')
+    };
+
+    var yFunc = [
+            function(i){return i < params.points / 5 ? 1. : 0.},
+            function(i){return i == params.points / 2 ? 100. : 0.},
+            function(){return Math.random()}
+        ],
+        schemes = [
+            function() {
+                return new ExplicitUpstreamScheme(params.velocity, params.kappa, params.dx, params.dt, y);
+            },
+            function() {
+                return new ExplicitDownstreamScheme(params.velocity, params.kappa, params.dx, params.dt, y);
+            },
+            function() {
+                return new ImplicitDownstreamScheme(params.velocity, params.kappa, params.dx, params.dt, y);
+            },
+            function() {
+                return new new ImplicitUpstreamScheme(params.velocity, params.kappa, params.dx, params.dt, y);
+            },
+            function() {
+                return new StaggeredGridScheme(params.velocity, params.kappa, params.dx, params.dt, y, (new ExplicitUpstreamScheme(params.velocity, params.kappa, params.dx, params.dt, y)).nextTimeLayer());
+            }
+        ],
+        chartPoints = [],
+        chart = new CanvasJS.Chart("chart",{
+            title : { text: "^_^" },
+            data: [{ type: "line", dataPoints: chartPoints }]
+        }),
+        func,
+        scheme,
+        x = [], y = [], timerId;
+
+    function updateParams() {
+        for (var p in elParams) {
+            if (p !== 'prototype' && elParams.hasOwnProperty(p) && elValues.hasOwnProperty(p)) {
+                elValues[p].innerHTML = elParams[p].value;
+                params[p] = +elParams[p].value;
+            }
+        }
+        elValues.prototype.scheme.innerHTML = elParams.prototype.scheme.selectedIndex + 1;
+        params.scheme = +elParams.prototype.scheme.selectedIndex;
+        elValues.prototype.func.innerHTML = elParams.prototype.func.selectedIndex + 1;
+        params.func = +elParams.prototype.func.selectedIndex;
+
+        func = yFunc[params.func];
+        initPoints();
+        scheme = schemes[params.scheme]();
+    }
+    updateParams();
+
+    (function(/* NodeList */ elements){
+        [].forEach.call(elements, function(/* HTMLCollection */ element) {
+            element.addEventListener('change', function(/* Event */ event) {
+                var element = event.currentTarget,
+                    number;
+                element.value = element.value.replace(/,/g,'.');
+                number = +element.value;
+
+                if (element.value.length === 0 || number !== number) {
+                    element.style.backgroundColor = "lightcoral";
+                    element.classList.add('broken');
+                    elButtons.update.disabled = "true"
+                } else {
+                    element.style.backgroundColor = "lightgreen";
+                    element.classList.remove('broken');
+                    if (document.getElementsByClassName('broken').length === 0) {
+                        elButtons.update.disabled = "";
+                    }
+                }
+            });
+            element.style.backgroundColor = "lightgreen";
+        });
+    })(document.getElementsByClassName("param"));
+
+    function initPoints() {
+        for (var i = 0; i < params.points; i++) {
+            x[i] = params.dx * i;
+            y[i] = func(i);
+        }
+    }
+    function updateChart() {
+        for (var i = 0; i < x.length; i++) {
+            chartPoints[i] = {
+                x: x[i],
+                y: y[i]
+            };
+        }
+        chart.render();
+    }
+    function init() {
+        initPoints();
+        updateChart();
     }
     function start() {
-        timerId = setInterval(updateAll, updateInterval);
-        b_start.disabled = "true";
-        b_pause.disabled = "";
-        b_start.innerHTML = "Resume";
+        timerId = setInterval(function() {
+            y = scheme.nextTimeLayer();
+            updateChart();
+        }, params.update);
+        elButtons.start.disabled = "true";
+        elButtons.stop.disabled = "";
     }
-    _init();
-    b_start.onclick = start;
-    b_pause.onclick = pause;
+    function stop() {
+        clearInterval(timerId);
+        elButtons.stop.disabled = "true";
+        elButtons.start.disabled = "";
+    }
+    function update() {
+        stop();
+        updateParams();
+        init();
+    }
+    init();
+    elButtons.start.addEventListener('click', start);
+    elButtons.stop.addEventListener('click', stop);
+    elButtons.update.addEventListener('click', update);
 </script>
 </body>
 </html>
