--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="img/favicon.ico" rel="shortcut icon"/>
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <script src="js/bootstrap.js"></script>
-    <script src="res/canvasjs.js"></script>
+    <script src="js/canvasjs.js"></script>
 
     <script src="res/ExplicitDownstreamScheme.js"></script>
     <script src="res/ExplicitUpstreamScheme.js"></script>
